--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@firebase/firestore": "^4.7.2",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "firebase": "^10.13.2",
+    "framer-motion": "^11.7.0",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
