--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/firestore": "^4.7.2",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "dayjs": "^1.11.13",
     "firebase": "^10.13.2",
     "framer-motion": "^11.7.0",
     "next": "14.2.13",
